--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,123 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{10.1063/5.0238609,
+    author = {\textbf{V. R. S. Parmar} and Bandyopadhyay, Ranjini},
+    title = {Manipulating crack formation in air-dried clay suspensions with tunable elasticity},
+    journal = {Physics of Fluids},
+    volume = {36},
+    number = {11},
+    pages = {113114},
+    year = {2024},
+    month = {11},
+    abstract = {Clay, the major ingredient of natural soils, is used as a rheological modifier while formulating paints and coatings. When subjected to desiccation, colloidal clay suspensions and clayey soils crack due to the accumulation of drying-induced stresses. Even when desiccation is suppressed, aqueous clay suspensions exhibit physical aging, with their elastic and viscous moduli increasing over time as the clay particles self-assemble into gel-like networks due to time-dependent inter-particle screened electrostatic interactions. The rate of evolution of the suspension structures and therefore of the mechanical moduli can be controlled by changing clay concentration or by incorporating additives. Since physical aging and desiccation should both contribute to the consolidation of drying clay suspensions, we manipulate the desiccation process via alterations of clay and additive concentrations. For a desiccating sample with an accelerated rate of aging, we observe faster consolidation into a semi-solid state and earlier onset of cracks. We estimate the crack onset time,  tc, in direct visualization experiments and the elasticity of the drying sample layer, E, using microindentation in an atomic force microscope. We demonstrate that  tc∝GcE, where  Gc, the fracture energy, is estimated by fitting our experimental data to a linear poroelastic model that incorporates the Griffith's criterion for crack formation. Our work demonstrates that early crack onset is associated with lower sample ductility. The correlation between crack onset in a sample and its mechanical properties as uncovered here is potentially useful in preparing crack-resistant coatings and diverse clay structures.},
+    issn = {1070-6631},
+    doi = {10.1063/5.0238609},
+    url = {https://doi.org/10.1063/5.0238609},
+    note = {(This article was selected as Editor's Pick.) \\{\color{mycolor}Media Coverages:} \textbf{1.} \url{https://dst.gov.in/researchers-develop-recipe-predict-crack-emergence-clay-holds-promise-improving-quality-paints-used}\\ \textbf{2.} \url{https://www.deccanherald.com/india/karnataka/bengaluru/how-bengaluru-researchers-are-redefining-material-science-with-clay-3334408}\\
+    \textbf{3.} \url{https://www.thehindu.com/sci-tech/science/study-cracks-when-cracks-come-and-go-in-paint-clay-milk-blood/article69171758.ece}
+           }
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+
+@article{Parmar_2024,
+doi = {10.1209/0295-5075/ad2d13},
+url = {https://dx.doi.org/10.1209/0295-5075/ad2d13},
+year = {2024},
+month = {mar},
+publisher = {EDP Sciences, IOP Publishing and Società Italiana di Fisica},
+volume = {145},
+number = {4},
+pages = {47001},
+author = {\textbf{V. R. S. Parmar} and Ranjini Bandyopadhyay},
+title = {Interfacial instabilities in confined displacements involving non-Newtonian fluids},
+journal = {Europhysics Letters},
+abstract = {The growth of interfacial instabilities during fluid displacements can be driven by gradients in pressure, viscosity and surface tension, and by applying external fields. Since displacements of non-Newtonian fluids such as polymer solutions, colloidal and granular slurries are ubiquitous in natural and industrial processes, understanding the growth mechanisms and fully developed morphologies of interfacial patterns involving non-Newtonian fluids is extremely important. In this perspective, we focus on displacement experiments, wherein competitions between capillary, viscous, elastic and frictional forces drive the onset and growth of primarily viscous fingering instabilities in confined geometries. We conclude by highlighting several exciting open problems in this research area.}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{PALAK2023130926,
+title = {Emergence of transient reverse fingers during radial displacement of a shear-thickening fluid},
+journal = {Colloids and Surfaces A: Physicochemical and Engineering Aspects},
+volume = {662},
+pages = {130926},
+year = {2023},
+issn = {0927-7757},
+doi = {https://doi.org/10.1016/j.colsurfa.2023.130926},
+url = {https://www.sciencedirect.com/science/article/pii/S0927775723000092},
+author = {{Palak*} and \textbf{V. R. S. Parmar*} and Sayantan Chanda and Ranjini Bandyopadhyay},
+keywords = {Radial Hele–Shaw flow, Miscible displacement, Shear-thickening cornstarch suspension, Reverse fingering, Normal stresses, Force chain networks},
+abstract = {A highly sheared dense aqueous suspension of granular cornstarch particles displays rich nonlinear rheology. We had previously demonstrated the growth and onset of interfacial instabilities when shear-thinning cornstarch suspensions were displaced by a Newtonian fluid, and had suggested methods to maximize displacement efficiency (Palak et. al., 2021). In the present work, we explore the miscible displacement of a dense aqueous cornstarch suspension in its discontinuous shear-thickening regime in a quasi-two-dimensional radial Hele-Shaw cell. We systematically study the growth kinetics of the inner interface between water and the cornstarch suspension, and also of the outer interface between the suspension and air. In addition to the growth of interfacial instabilities at the inner interface, we observe a transient withdrawal of the suspension and the formation of fingering instabilities at the outer interface. We demonstrate that these ‘reverse fingering’ instabilities are extremely sensitive to the injection flow rate of water, the gap of the Hele-Shaw cell and the concentration of the displaced cornstarch suspension, and emerge irrespective of immiscibility between the fluid pair. We believe that as the cornstarch suspension dilates due to the high shear rate imposed by the displacing fluid, the outer suspension-air interface responds with a restoring force, resulting in the penetration of air into the suspension and the formation of reverse fingers. We note that the growth of reverse fingers significantly reduces the displacement efficiency of the suspension. Finally, we demonstrate a correlation in the growth of inner and outer interfacial patterns by computing the velocity with which stresses propagate in the confined dense suspension. Our findings are useful in understanding the flow of granular materials through constrained geometries and can be extended to study stress propagation in shear-thickening materials due to a sudden imposition of high shear rate, such as in impact behaviour.},
+note         = {(* these authors contributed equally to the completion of this work.)\\{\color{mycolor}Media Coverage:} \url{https://dst.gov.in/new-finding-explains-novel-instability-flow-viscoelastic-materials-confined-environments-can-help}}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{PALAK2022100047,
+title = {Pattern selection in radial displacements of a confined aging viscoelastic fluid},
+journal = {JCIS Open},
+volume = {6},
+pages = {100047},
+year = {2022},
+issn = {2666-934X},
+doi = {https://doi.org/10.1016/j.jciso.2022.100047},
+url = {https://www.sciencedirect.com/science/article/pii/S2666934X22000058},
+author = { Palak and \textbf{V. R. S. Parmar} and Debasish Saha and Ranjini Bandyopadhyay},
+abstract = {Intricate fluid displacement patterns, arising from the unstable growth of interfacial perturbations, can be driven by fluid viscoelasticity and surface tension. A soft glassy suspension ages, i.e. its mechanical moduli evolve with time, due to the spontaneous formation of suspension microstructures. The shear and time-dependent rheology of an aging suspension can be exploited to generate a wide variety of interfacial patterns during its displacement by a Newtonian fluid. Using video imaging, we report a rich array of interfacial pattern morphologies: dense viscous, dendritic, viscoelastic fracture, flower-shaped, jagged and stable, during the miscible and immiscible displacements of an aging colloidal clay suspension by Newtonian fluids injected into a radial quasi-two-dimensional geometry at different flow rates. We propose a new parameter, the areal ratio, which we define as the fully developed pattern area normalized by the area of the smallest circle enclosing it. We show that the natural logarithms of the areal ratios uniquely identify the distinct pattern morphologies, such that each pattern can be segregated in a three-dimensional phase diagram spanned by the suspension aging time, the displacing fluid flow rate, and interfacial tension. Besides being of fundamental interest, our results are useful in predicting and controlling the growth of interfaces during fluid displacements.}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+
+@Article{D2SM01457B,
+author ="Biswas, Rajkumar and \textbf{V. R. S. Parmar} and Thambi, Anson G and Bandyopadhyay, Ranjini",
+title  ="Correlating microscopic viscoelasticity and structure of an aging colloidal gel using active microrheology and cryogenic scanning electron microscopy",
+journal  ="Soft Matter",
+year  ="2023",
+volume  ="19",
+issue  ="13",
+pages  ="2407-2416",
+publisher  ="The Royal Society of Chemistry",
+doi  ="10.1039/D2SM01457B",
+url  ="http://dx.doi.org/10.1039/D2SM01457B",
+ note = {\\{\color{mycolor}Media Coverage:} \url{https://dst.gov.in/new-way-track-particles-soft-colloids-using-optical-tweezers-can-be-applied-targeted-drug-delivery}}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+
+@article{PALAK2023100084,
+title = {Growth kinetics of interfacial patterns formed by the radial displacement of an aging viscoelastic suspension},
+journal = {JCIS Open},
+volume = {10},
+pages = {100084},
+year = {2023},
+issn = {2666-934X},
+doi = {https://doi.org/10.1016/j.jciso.2023.100084},
+url = {https://www.sciencedirect.com/science/article/pii/S2666934X23000119},
+author = { Palak and \textbf{V. R. S. Parmar} and Ranjini Bandyopadhyay},
+keywords = {Colloidal clay suspensions, Radial Hele-Shaw flows, Viscoelastic fluids, Interfacial pattern evolution, Viscoelastic fractures, Newtonian-non-Newtonian interfacial growth},
+abstract = {When a soft glassy colloidal suspension is displaced by a Newtonian fluid in a radial Hele-Shaw geometry, the pattern morphology that develops at the interface is determined by the complex rheology of the former. We had reported in an earlier work [Palak, V. R. S. Parmar, D. Saha and R. Bandyopadhyay, JCIS Open, 6 (2022) 100047] that a range of pattern morphologies characterised by distinctive structural features can be formed by controlling the elasticity of the displaced suspension, the flow rate of the displacing fluid and the interfacial tension of the fluid pair. Interestingly, all the different morphological features can be distinguished in terms of their areal ratios, defined as the ratio of the areas occupied by the fully-developed pattern and the smallest circle enclosing it. In a significant advance to this earlier work, we show here that a systematic study of spatio-temporal pattern growth can reveal important information about pattern selection mechanisms. We analyse the time-evolution of the patterns to reveal interesting correlations between their growth mechanisms and fully-developed morphologies. We believe that such systematic identification of the unique temporal features characterising pattern growth at the interface between an aging viscoelastic clay suspension and a Newtonian fluid can be useful in pre-empting and suppressing the onset and evolution of interfacial instabilities in the displacement of mud and cement slurries.}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@Article{D4SM01319K,
+author ="\textbf{V. R. S. Parmar} and Chanda, Sayantan and Sivasubramaniam, Sri Vishnu Bharat and Bandyopadhyay, Ranjini",
+title  ="Using optical tweezer electrophoresis to investigate clay nanoplatelet adsorption on Latex microspheres in aqueous media",
+journal  ="Soft Matter",
+year  ="2025",
+pages  ="-",
+publisher  ="The Royal Society of Chemistry",
+doi  ="10.1039/D4SM01319K",
+url  ="http://dx.doi.org/10.1039/D4SM01319K",
+abstract  ="The adsorption of charged clay nanoplatelets plays an important role in stabilizing emulsions by forming a barrier around the emulsion droplets and preventing coalescence. In this work{,} the adsorption of charged clay nanoplatelets on a preformed Latex microsphere in an aqueous medium is investigated at high temporal resolution using optical tweezer-based single-colloid electrophoresis. Above a critical clay concentration{,} charged clay nanoplatelets in an aqueous medium self-assemble gradually to form gel-like networks that become denser with increasing medium salinity. In a previous publication [R. Biswas et. al.{,} Soft Matter{,} 2023{,} 19{,} 24007-2416]{,} some of us had demonstrated that a Latex microsphere{,} optically trapped in a clay gel medium{,} is expected to attach to the network strands of the gel. In the present contribution{,} we show that for different ionic conditions of the suspending medium{,} the adsorption of clay nanoplatelets increases the effective surface charge on an optically trapped Latex microsphere while also enhancing the drag experienced by the latter. Besides the ubiquitous contribution of non-electrostatic dispersion forces in driving the adsorption process{,} we demonstrate the presence of an electrostatically-driven adsorption mechanism when the microsphere was optically trapped in a clay gel. These observations are qualitatively verified via cryogenic field emission scanning electron microscopy and are useful in achieving colloidal stabilisation{,} for example{,} during the preparation of clay-armoured Latex particles in Pickering emulsion polymerisation.",
+note = {(This article is part of the themed collection: Colloidal interactions, dynamics and rheology).\\{\color{mycolor}Media Coverages:} \textbf{1.} \url{https://pib.gov.in/PressReleseDetail.aspx?PRID=2118305&reg=3&lang=1}\\
+         \textbf{2.} \url{https://www.deccanherald.com/india/karnataka/bengaluru/laser-tweezers-help-scientists-see-particles-stick-in-real-time-3500487}\\
+           \textbf{3.} \url{https://www.devdiscourse.com/article/science-environment/3333186-exploring-adsorption-at-nanoscale-new-insights-from-optical-tweezer-electrophoresis}
+           }
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+
+@misc{parmar2024hs,
+      title={{Effect of permeability heterogeneity, shear-thinning and elasticity of clay suspensions on viscous fingering in miscible Hele-Shaw displacements}}, 
+      author={\textbf{V. R. S. Parmar} and Palak and Ranjini Bandyopadhyay},
+      year={2025},
+    note         = {(Manuscript in preparation)}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@misc{parmarpnipam,
+      title={{Self-assembly of amphiphilic microgels at the air-water interface during sessile droplet drying}}, 
+      author={\textbf{V. R. S. Parmar} and Sayantan Chanda and Rituparno Mandal and Ranjini Bandyopadhyay},
+      year={2025},
+    note         = {(Manuscript in preparation)}
 }
+
